--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "enqueue/dsn",
+    "name": "micro-module/dsn",
     "type": "library",
     "description": "Parse DSN",
     "keywords": ["dsn", "parse"],
     "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3 || ^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.5"
